Remove parameter for IntuneManagement version and set to a fixed release in workflow

--- a/.github/workflows/IntuneImportParameterized.yml
+++ b/.github/workflows/IntuneImportParameterized.yml
@@ -59,11 +59,6 @@ on:
         required: false
         default: ''
         type: string
-      intune_management_version:
-        description: 'IntuneManagement tool version/tag'
-        required: false
-        default: '3.9.8'
-        type: string
       dry_run:
         description: 'Perform a dry run (validate configuration without importing)'
         required: false
@@ -82,7 +77,7 @@ jobs:
         with:
           repository: Micke-K/IntuneManagement
           path: ./IntuneManagement
-          ref: ${{ inputs.intune_management_version }}
+          ref: 3.9.8 # use a known good release or latest tag
 
       # 3. Validate import path exists
       - name: Validate Import Path
