--- a/.github/workflows/IntuneManagementRestore.yml
+++ b/.github/workflows/IntuneManagementRestore.yml
@@ -29,9 +29,9 @@ jobs:
             exit 1
           }
           Write-Host "BulkImport.json content: $(Get-content $silentbatchFile.FullName)"
-          $Env:AAD_TENANT_ID = ${{ secrets.AZURE_TENANT_ID }}
-          $Env:AAD_APP_ID = ${{ secrets.AZURE_CLIENT_ID }}
-          $Env:AAD_APP_SECRET = ${{ secrets.AZURE_CLIENT_SECRET }}
+          $Env:AAD_TENANT_ID = "${{ secrets.AZURE_TENANT_ID }}"
+          $Env:AAD_APP_ID = "${{ secrets.AZURE_CLIENT_ID }}"
+          $Env:AAD_APP_SECRET = "${{ secrets.AZURE_CLIENT_SECRET }}"
 
           Write-Host "TenantId: $env:AAD_TENANT_ID"
           Write-Host "AppId: $env:AAD_APP_ID"
