Refactor Intune Management Scripts: Remove legacy backup script and introduce interactive configuration generator
- Deleted the outdated IntuneManagement-TestLocal.ps1 script, which was responsible for backup and restore operations.
- Added a new Generate-BulkConfig.ps1 script to facilitate the interactive generation of BulkExport.json and BulkImport.json configuration files.
- Enhanced user experience with an interactive menu for selecting object types and configuring export/import settings.
- Implemented UTF-8 encoding for generated JSON files to ensure compatibility.

--- a/.github/workflows/IntuneImportParameterized.yml
+++ b/.github/workflows/IntuneImportParameterized.yml
@@ -198,7 +198,6 @@ jobs:
           Write-Host "Generated BulkImport configuration:"
           Write-Host "Import Path: ${{ inputs.import_path }}"
           Write-Host "Name Filter: ${{ inputs.name_filter }}"
-          Write-Host "Add Object Type: ${{ inputs.add_object_type }}"
           Write-Host "Import Scopes: ${{ inputs.import_scopes }}"
           Write-Host "Import Assignments: ${{ inputs.import_assignments }}"
           Write-Host "Replace Dependency IDs: ${{ inputs.replace_dependency_ids }}"
@@ -231,9 +230,9 @@ jobs:
           # Validate JSON content
           try {
             $jsonContent = Get-Content $($silentBatchFile.FullName) | Out-String | ConvertFrom-Json
-            Write-Host "✓ Configuration file validation successful" -ForegroundColor Green
+            Write-Host "Configuration file validation successful" -ForegroundColor Green
           } catch {
-            Write-Error "✗ Configuration file contains invalid JSON: $_"
+            Write-Error "Configuration file contains invalid JSON: $_"
             exit 1
           }
           
