--- a/.github/workflows/IntuneManagementBackup.yml
+++ b/.github/workflows/IntuneManagementBackup.yml
@@ -68,6 +68,9 @@ jobs:
             Secret           = $env:AAD_APP_SECRET
           }
           .\IntuneManagement\Start-IntuneManagement.ps1 @params
+
+          # Convert JSON files to UTF-8 without BOM
+          .\Convert-JsonToUtf8.ps1
         shell: powershell
 
       # 5. Commit and push the backup to the repo
