Enable company name inclusion in exported files by default

--- a/.github/workflows/IntuneExportParameterized.yml
+++ b/.github/workflows/IntuneExportParameterized.yml
@@ -32,7 +32,7 @@ on:
       add_company_name:
         description: 'Add company name to exported files'
         required: false
-        default: false
+        default: true
         type: boolean
       export_scripts:
         description: 'Export PowerShell scripts'
