--- a/.github/workflows/IntuneExportParameterized.yml
+++ b/.github/workflows/IntuneExportParameterized.yml
@@ -4,8 +4,8 @@ permissions:
   contents: write
 
 on:
-  push:
-    branches: [ main ]
+  # push:
+  #  branches: [ main ]
   # Uncomment the following line to enable scheduled runs
   #schedule:
   # - cron: "0 14 * * *"
