Add Windows Update for Business configurations for OIB rings
- Created new JSON configuration files for Windows Update for Business (WUfB) settings:
  - Ring 1 - Pilot (v3.0): Devices receive updates immediately after release with a 1-day grace period before forced reboot.
  - Ring 2 - UAT (v3.0): Devices receive updates 3 days after release with a 0-day deadline on install and a 2-day grace period before forced reboot.
  - Ring 3 - Production (v3.0): Devices receive updates 10 days after release with a 2-day deadline on install and a 1-day grace period before forced reboot.

- Each configuration includes settings for update deferral periods, restart behavior, user access, and notification levels.

--- a/.github/workflows/IntuneImportParameterized.yml
+++ b/.github/workflows/IntuneImportParameterized.yml
@@ -151,7 +151,7 @@ jobs:
           }
           
           if ("${{ inputs.replace_dependency_ids }}" -ne "") {
-            $scriptParams.ReplaceDependencyIDs = [bool]::Parse("${{ inputs.replace_dependency_ids }}")
+            $scriptParams.ReplaceDependencyIds = [bool]::Parse("${{ inputs.replace_dependency_ids }}")
           }
           
           if ("${{ inputs.import_type }}" -ne "") {
@@ -165,6 +165,23 @@ jobs:
           if ($objectTypesArray) {
             $scriptParams.ObjectTypes = $objectTypesArray
           }
+          
+          # Convert JSON files to UTF-8 encoding before import
+          Write-Host "Converting JSON files to UTF-8 encoding..." -ForegroundColor Green
+          $importPath = "${{ inputs.import_path }}"
+          $jsonFiles = Get-ChildItem -Path $importPath -Filter "*.json" -Recurse -File
+          foreach ($file in $jsonFiles) {
+            try {
+              $content = Get-Content -Path $file.FullName -Raw -Encoding UTF8
+              $utf8NoBom = New-Object System.Text.UTF8Encoding($false)
+              [System.IO.File]::WriteAllText($file.FullName, $content, $utf8NoBom)
+              Write-Host "Converted: $($file.FullName)" -ForegroundColor Cyan
+            }
+            catch {
+              Write-Warning "Failed to convert $($file.FullName): $($_.Exception.Message)"
+            }
+          }
+          Write-Host "UTF-8 conversion completed." -ForegroundColor Green
           
           # Execute the restore script
           .\Invoke-IntuneBackupRestore.ps1 @scriptParams
