--- a/.github/workflows/IntuneExportParameterized.yml
+++ b/.github/workflows/IntuneExportParameterized.yml
@@ -8,8 +8,8 @@ on:
   #push:
   # branches: [ main ]
   # Scheduled daily backup at 14:00 UTC
-  schedule:
-   - cron: "0 14 * * *"
+  # schedule:
+  # - cron: "0 14 * * *"
   workflow_dispatch:
     inputs:
       export_path:
